# dbt-bigquery-analytics-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Makefile  README.md  dbt_project.yml  package-lock.yml  packages.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: analytics_hourly.py  analytics_weekly_refresh.py
config/: profiles.ci.yml  profiles.yml.example
docs/: ARCHITECTURE.md  LOCAL_DEVELOPMENT.md  PERFORMANCE.md  TESTING.md
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf
infra/terraform/envs/: dev.backend.hcl.example  dev.tfvars.example
infra/terraform/modules/bigquery/: main.tf  outputs.tf  variables.tf
macros/: audit_helpers.sql  generate_schema_name.sql  generate_surrogate_key.sql  safe_cast.sql  tests.sql
models/marts/core/: _core__models.yml  _unit_tests.yml  dim_customer.sql  dim_product.sql  fct_order_items.sql  fct_orders.sql
models/marts/finance/: _finance__models.yml  customer_ltv.sql  revenue_ledger.sql
models/marts/marketing/: _marketing__models.yml  session_funnel.sql
models/semantic/: _spine.yml  metricflow_time_spine.sql  sales.yml
models/staging/raw_ecommerce/: _sources.yml  _staging__models.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_sessions.sql
scripts/: __init__.py  cli.py  deploy.sh  freshness_check.py
seeds/: _seeds__schema.yml  country_regions.csv
snapshots/: snap_customers_scd2.sql  snap_products_scd2.sql
tests/: assert_no_orphaned_order_items.sql  assert_revenue_reconciliation.sql
